# d2l_pytorch_scratch

./: README.md  main.py  pyproject.toml
DiveInDL/10-chapter_attention-mechanisms/: 10.2-nadaraya-waston.py  10.3-attention-scoring-functions.py  10.4-bahdanau-attention.py  10.5-multihead-attention.py  10.6-self-attention-and-positional-encoding.py  10.7-transformer-experiment.py  10.7-transformer.py
DiveInDL/13-chapter_computer-vision/: 13.11-fcn.py  13.2-fine-tuning.py  13.3-bounding-box.py  13.4-anchor.py  13.7-ssd.py
DiveInDL/14-chapter_natural-language-processing-pretraining/: 14.10-bert-pretraining.py  14.3-word-embedding-dataset.py  14.4-word2vec-pretraining.py  14.7-similarity-analogy.py  14.8-bert.py  14.9-bert-dataset.py
DiveInDL/15-chapter_natural-language-processing-applications/: 15.2-sentiment-analysis-rnn.py  15.3-sentiment-analysis-cnn.py  15.5-natural-language-inference-attention.py  15.7-natural-language-inference-bert.py
DiveInDL/2-chapter_preliminaries/: 2.3-linear-algebra.ipynb  2.4-calculus.ipynb  2.6probability.ipynb
DiveInDL/3-chapter_linear-networks/: 3.2-linear-regression-scratch.ipynb  3.2-linear-regression-scratch.py  3.6-softmax-regression-scratch.py  3.7-softmax-regression-concise.py
DiveInDL/4-chapter_multilayer-perceptrons/: 4.2-mlp-scratch.py  4.3-mlp-concise.py  4.5-weight-decay-concise.py  4.5-weight-decay-scratch.py  4.5-weight-decay.ipynb
DiveInDL/7-chapter_convolutional-modern/: 7.1-alexnet.py  7.2-vgg.py  7.7-densenet.py
DiveInDL/8-chapter_recurrent-neural-networks/: 8.2-text-preprocessing.py  8.5-rnn-scratch.py  (+2 more)
(+29 files in other folders)
