[project]
name = "pytorchstudy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arrow>=1.3.0",
    "d2l>=1.0.3",
    "pyarrow>=20.0.0",
    "scikit-learn>=1.7.0",
    "torch>=2.7.0",
    "torchinfo>=1.8.0",
    "torchvision>=0.22.0",
]
